<?xml version="1.0"?>
<package format="3">
  <name>simulation_objects</name>
  <version>2.1.2</version>
  <description>Simulation Objects utilities package</description>

  <maintainer email="bernhard.reiterer@joanneum.at">Bernhard Reiterer</maintainer>
  <maintainer email="benjamin.breiling@joanneum.at">Benjamin Breiling</maintainer>

  <license>MIT</license>

  <author email="bernhard.reiterer@joanneum.at">Bernhard Reiterer</author>
  <author email="benjamin.breiling@joanneum.at">Benjamin Breiling</author>
  <author email="nobody@example.com">Matteo Lucchi</author>
  <author email="nobody@example.com">Friedemann Zindler</author>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
